<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/side_navigation_menu_item1"
        android:title="@string/title1"/>
    <item
        android:id="@+id/side_navigation_menu_item2"
        android:title="@string/title2"/>
    <item
        android:id="@+id/side_navigation_menu_item3"
        android:title="@string/title3"/>
    <item
        android:id="@+id/side_navigation_menu_item4"
        android:title="@string/title4"/>
    <item
        android:id="@+id/side_navigation_menu_item5"
        android:title="@string/title5"/>
    <item
        android:id="@+id/side_navigation_menu_item6"
        android:title="@string/title6"/>
    <item
        android:id="@+id/side_navigation_menu_item7"
        android:title="@string/title7"/>
    
     <item
        android:id="@+id/side_navigation_menu_item8"
        android:title="@string/title8"/>

</menu>